# aws-docs-to-epub

./: .coverage  .gitignore  EXAMPLES.md  INTERNAL_LINKS.md  LICENSE  README.md  REFACTORING.md  RESTRUCTURING.md  aws_docs_to_epub.py  aws_docs_to_epub_old.py  aws_docs_to_epub_old2.py  converter.py  epub_builder.py  image_utils.py  pyproject.toml  scraper.py  setup.sh  toc_parser.py
.github/workflows/: ci.yml
scripts/: dev_install.sh
src/aws_docs_to_epub/: __init__.py  __main__.py  cli.py  converter.py
src/aws_docs_to_epub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aws_docs_to_epub/assets/: epub_styles.css
src/aws_docs_to_epub/commands/: __init__.py
src/aws_docs_to_epub/core/: __init__.py  epub_builder.py  image_utils.py  scraper.py  toc_parser.py
tests/integration/: test_full_conversion.py
tests/unit/: test_cli.py  test_cli_extended.py  test_converter.py  test_converter_extended.py  test_coverage_improvements.py  test_css_assets.py  test_custom_css.py  test_epub_builder.py  test_image_utils.py  test_internal_links.py  test_main.py  test_scraper.py  test_toc_parser.py
